Search and text input functionality for API call
Now handled by UI.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel= "stylesheet" href="style.css">
     <script src = "fetch.js" defer></script>
 </head>
 <body>
+    <h1>Bootcamp Karaoke</h1>
+    <div class = "top-container">
+        <div class = button-container>
+            <label>Artist:
+                <input class = "artist-input" type = "text"/>
+            </label>
+            <label>Title:
+                <input class = "title-input" type = "text"/>
+            </label>
+        <button class = "search-button">Search</button>
+    </div>
+    </div>
+    <div class = "bottom-container">
+        <p id="lyrics">...Lyrics will be displayed here...</p>
+    </div>
     
 </body>
 </html>
