Added full styling to main page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src = "fetch.js" defer></script>
 </head>
 <body>
-    <h1>Bootcamp Karaoke</h1>
-    <div class = "top-container">
+    <section class="search-container">
+        <h3>The Soundtrack To Your Squats</h3>
+        <h1>Bootcamp Karaoke</h1>
         <div class = button-container>
             <label>Artist:
                 <input class = "artist-input" type = "text"/>
@@ -18,11 +19,13 @@
                 <input class = "title-input" type = "text"/>
             </label>
         <button class = "search-button">Search</button>
+    </section>
     </div>
-    </div>
-    <div class = "bottom-container">
+    <section class="buffer">
+        <h2>- LYRICS -</h2>
+    </section>
+    <section class="colored-lyrics-container">
         <p id="lyrics">...Lyrics will be displayed here...</p>
-    </div>
-    
+    </section>
 </body>
 </html>
